Frontend: Login Component created and fixed z-index on page layout

--- a/portfolio-ui/src/styles.css
+++ b/portfolio-ui/src/styles.css
@@ -24,6 +24,11 @@
 }
 
 /* General */
+
+html, body {
+  height: 100%;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -55,7 +60,7 @@ p{
   border: none;
 }
 
-.btn:disabled {
+button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
   pointer-events: none;
@@ -92,7 +97,7 @@ p{
   border-radius: 0.375rem;
   font-family: 'Inter', sans-serif;
   color: #374151;
-  font-size: 1rem;
+  font-size: 0.8rem;
   transition: border-color 0.2s, box-shadow 0.2s;
 }
 
